added first draft of a bun test for the API along with extending the API to support bulk operations (no UI yet)
